Fix spacing issue in navbuttons

--- a/ui/app/src/main/java/org/activityinfo/ui/client/header/NavButton.scss
+++ b/ui/app/src/main/java/org/activityinfo/ui/client/header/NavButton.scss
@@ -6,8 +6,8 @@
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
-  flex: 1 0 5.5rem;
-  width: 5.5rem;
+  flex: 1 0 6.5rem;
+  width: 6.5rem;
   height: 100%;
   padding: 1rem 0.5rem 0.5rem;
   text-align: center;
